@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    - Restores backward compatibility (with a warning) when the deprecated
+      $pdf->pageLabel is given an invalid -style option starting with "a" or
+      "r" (report by Johan Vromans).
+
+
 2.042     2021-09-16
 
     - This release includes many changes to method names, options, and
